2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/CSharpTextEditorCompletion.cs: fixed
	  'Bug 431761 - Code completion is incorrect'.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs: fixed +-1 error.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed possible null reference.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/ResolveVisitor.cs: fixed 'base' bug.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs, Gui/ResolveVisitor.cs: fixed 'Bug 432436 -
	  Code completion shouldn't activate before the equals when declaring
	  variables'.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs, Gui/NRefactoryResolver.cs,
	  Gui/CSharpTextEditorCompletion.cs: fixed Bug 432435 - Code
	  completion shows 'List', not List<T>.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: fixed Bug 432658 - Incorrect completion
	  when calling an extension method from inside another extension
	  method.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorIndentation.cs: Fixed a bug in tab as reindent
	  command.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: fixed 'Bug 431797 - Code completion
	  showing invalid options'.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 431759 - Code
	  completion should not happen in #region directives'.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: fixed 'Bug 431764 - Completion doesn't
	  work in properties'.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 432437 - No
	  completion when invoking delegates'.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Updated xml comment tag