@@ -1,5 +1,10 @@
 2008-10-07  Mike Krüger <mkrueger@novell.com> 
 
+	* Gui/NRefactoryParameterDataProvider.cs, Gui/CSharpAmbience.cs,
+	  Gui/CSharpTextEditorCompletion.cs: Worked on code completion.
+
+2008-10-07  Mike Krüger <mkrueger@novell.com> 
+
 	* Gui/NRefactoryResolver.cs, Gui/CSharpTextEditorCompletion.cs: fixed
 	  'Bug 431761 - Code completion is incorrect'.
 
